# SearchSECOCrawler

./: .gitlab-ci.yml  Crawler.sln  README.md  SearchSECOCrawler.sln
.github/workflows/: testing.yml
Crawler/: .clang-format  CMakeLists.txt  CrawlData.h  Crawler.cpp  Crawler.h  Crawler.vcxproj  Crawler.vcxproj.filters  EmptyHandler.cpp  ErrorHandler.cpp  ErrorHandler.h  ErrorList.h  GithubClientErrorConverter.cpp  GithubClientErrorConverter.h  GithubCrawler.cpp  GithubCrawler.h  GithubInterface.cpp  GithubInterface.h  IndividualErrorHandler.h  JSON.cpp  JSON.h  LogHandler.cpp  LogThrowHandler.cpp  Logger.cpp  Logger.h  LoggerCrawler.cpp  LoggerCrawler.h  Networking.cpp  Networking.h  ProjectMetadata.h  RepositoryCrawler.cpp  RepositoryCrawler.h  RunCrawler.cpp  RunCrawler.h  Runcrawler.cpp  Runcrawler.h  Utility.cpp  Utility.h  pch.h
Crawler-Test/: CMakeLists.txt  Crawler-Test.vcxproj  GithubCrawlerIntegrationTesting.cpp  GithubCrawler_test.cpp  GithubInterfaceMock.cpp  IndividualErrorHandler_test.cpp  IntegrationTests.cpp  JSON_test.cpp  pch.cpp  pch.h  test.cpp
SearchSECOCrawler/: CMakeLists.txt  main.cpp
Standalone/: CMakeLists.txt  Standalone.vcxproj  main.cpp
curlcpp/: CMakeLists.txt
curlcpp/src/: CMakeLists.txt
libSearchSECOCrawler/: .clang-format  CMakeLists.txt  CrawlData.h  EmptyHandler.cpp  ErrorHandler.cpp  ErrorHandler.h  ErrorList.h  GithubClientErrorConverter.cpp  GithubClientErrorConverter.h  GithubCrawler.cpp  GithubCrawler.h  GithubInterface.cpp  GithubInterface.h  IndividualErrorHandler.h  JSON.cpp  JSON.h  LogHandler.cpp  LogThrowHandler.cpp  LoggerCrawler.cpp  LoggerCrawler.h  ProjectMetadata.h  RunCrawler.cpp  RunCrawler.h  Utility.cpp  Utility.h
tests/: CMakeLists.txt  GithubCrawler_test.cpp  GithubInterfaceMock.cpp  GithubInterfaceMock.h  IntegrationTests.cpp  JSON_test.cpp
vsProjects/: Crawler-Test.vcxproj  Crawler.vcxproj  SearchSECOCrawler.vcxproj  SearchSECOCrawler.vcxproj.filters  Standalone.vcxproj  Standalone.vcxproj.filters  libSearchSECOCrawler.vcxproj  libSearchSECOCrawler.vcxproj.filters  tests.vcxproj
